--- a/style.css
+++ b/style.css
@@ -1,6 +1,6 @@
 *, *::before, *::after {
     box-sizing: border-box;
-    font-family: Gotham Rounded, sans-serif;
+    font-family: 'Courier New', Courier, monospace;
     font-weight: normal;
   }
   
